--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
     "date-fns": "^2.29.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   }
+
 }
